--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Montserrat', sans-serif; /* Font for headings */
+  font-family: 'Montserrat', sans-serif;
 }
 
 code {
@@ -24,4 +24,48 @@ code {
 
 .text-10xl{
   font-size: 10rem;
+}
+
+.white-linear-border {
+  border-width: 4px;
+  border-style: solid; 
+  border-image-source: linear-gradient(to bottom, transparent 0%, #FFFFFF 22%);
+  border-image-slice: 1; 
+  border-radius: 5% 5% 0 0; 
+  border-bottom: none; 
+}
+
+.platform-linear-border {
+  border-width: 4px;
+  border-style: solid; 
+  border-image-source: linear-gradient(to top, transparent 0%, #FFFFFF 22%);
+  border-image-slice: 1; 
+  border-radius: 0 0 0 5%; 
+}
+
+
+
+.rounded-in-down {
+  width: 93px;                  /* Width of the div */
+  height: 84px;                 /* Height of the div */
+  border-width: 2px;            /* Set a reasonable border width */
+  border-style: solid;          /* Ensure the border is solid */
+  border-image-source: linear-gradient(to bottom, transparent 0%, #FFFFFF 22%); /* Gradient for the border */
+  border-image-slice: 1;       /* Fill the entire border with the image */
+  border-radius: 5% 5% 0 0;    /* Rounded corners at the top */
+  border-bottom: none;          /* Remove the bottom border */
+  background: transparent;      /* Set background to transparent */
+}
+
+
+.rounded-in-up {
+  width: 93px;                  /* Width of the div */
+  height: 84px;                 /* Height of the div */
+  border-width: 2px;            /* Set a reasonable border width */
+  border-style: solid;          /* Ensure the border is solid */
+  border-image-source: linear-gradient(to top, transparent 0%, #FFFFFF 22%); /* Gradient for the border */
+  border-image-slice: 1;       /* Fill the entire border with the image */
+  border-radius: 5% 5% 0 0;    /* Rounded corners at the top */
+  border-top: none;          /* Remove the bottom border */
+  background: transparent;      /* Set background to transparent */
 }
